# amr_interop_bridge

./: LICENSE  README.md
amr_interop_bridge/: CMakeLists.txt  package.xml
amr_interop_bridge/launch/: amr_interop_bridge_full.launch  amr_interop_bridge_required.launch
amr_interop_bridge/scripts/: amr_interop_bridge.py  fake_base_robot_envelope.py  fake_battery_percentage.py  fake_cargo_max_weight.py  fake_cargo_type.py  fake_error_codes.py  fake_location.py  fake_manufacture_name.py  fake_path_and_destinations.py  fake_product_documentation.py  fake_robot_model.py  fake_robot_serial_number.py  fake_support_vendor_name.py  fake_thumbnail_image.py  fake_thumnail_image.py  fake_uuid.py  fake_velocity.py
amr_interop_msgs/: CMakeLists.txt  package.xml
amr_interop_msgs/msg/: Location.msg  PredictedLocation.msg  Velocity.msg
interop_bridge/: CMakeLists.txt  package.xml
interop_bridge/launch/: interop_bridge_full.launch  interop_bridge_required.launch
interop_bridge/scripts/: fake_cargo_max_volume.py  fake_charger_type.py  fake_emergency_contact_information.py  fake_error_codes.py  fake_load_percentage_still_avaiable.py  fake_location.py  fake_max_run_time.py  fake_max_speed.py  fake_operational_state.py  fake_path_and_destinations.py  fake_remaining_run_time.py  fake_support_vendor_contact_information.py  fake_velocity.py  interop_bridge.py
interop_msgs/: CMakeLists.txt  package.xml
interop_msgs/msg/: PredictedLocations.msg
