<?xml version="1.0"?>
<package format="2">
  <name>interop_msgs</name>
  <version>0.1.0</version>
  <description>The interop_msgs package</description>
  <maintainer email="yasuyuki.miura@lexxpluss.com">MIURA Yasuyuki</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/LexxPluss/amr_interop_bridge/issues</url>
  <url type="repository">https://github.com/LexxPluss/amr_interop_bridge</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
